非推奨のメソッドを使用しないように変更 (#2)
* Create release.yml

* Update Report.java

* Update webhooksender.java